nullaway_error_08c6e28f-55c5-40a2-9077-a41d87298e99.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/AmbientLight.java:156: error: [NullAway] dereferenced expression lightShape is @Nullable
    final double radius = lightShape.getBounds2D().getWidth() > lightShape.getBounds2D().getHeight() ? lightShape.getBounds2D().getWidth() : lightShape.getBounds2D().getHeight();
                                    ^
    (see http://t.uber.com/nullaway )
